--- a/Acr.MvvmCross.Plugins.BarCodeScanner.Droid/Acr.MvvmCross.Plugins.BarCodeScanner.Droid.csproj
+++ b/Acr.MvvmCross.Plugins.BarCodeScanner.Droid/Acr.MvvmCross.Plugins.BarCodeScanner.Droid.csproj
@@ -12,9 +12,8 @@
     <FileAlignment>512</FileAlignment>
     <AndroidResgenFile>Resources\Resource.Designer.cs</AndroidResgenFile>
     <GenerateSerializationAssemblies>Off</GenerateSerializationAssemblies>
-    <AndroidUseLatestPlatformSdk>True</AndroidUseLatestPlatformSdk>
-    <TargetFrameworkVersion>
-    </TargetFrameworkVersion>
+    <AndroidUseLatestPlatformSdk>False</AndroidUseLatestPlatformSdk>
+    <TargetFrameworkVersion>v3.1</TargetFrameworkVersion>
     <ProductVersion>8.0.30703</ProductVersion>
     <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
